--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -202,6 +202,8 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-functions:19.0.2'
+    def multidex_version = "2.0.1"
+    implementation "androidx.multidex:multidex:$multidex_version"
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
