--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -214,6 +214,14 @@ dependencies {
     }
 }
 
+configurations.all {
+    // Fix webview crash on Lollipop with appcompat 1.1.0
+    // https://issuetracker.google.com/issues/141132133
+    def appcompat_version = "1.2.0-beta01"
+    resolutionStrategy.force "androidx.appcompat:appcompat:$appcompat_version"
+    resolutionStrategy.force "androidx.appcompat:appcompat-resources:$appcompat_version"
+}
+
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
